jadex-android: fixed build